# gilbert

./: .gitignore  .gitmodules  CLAUDE.md  README.md  gilbert.sh  pyproject.toml
.claude/commands/: merge-pr.md  validate.md
.claude/memory/: MEMORIES.md  memory-ai-prompts-configurable.md  memory-dashboard-nav.md  memory-multi-user-isolation.md  memory-plugin-ui-extensions.md
.claude/skills/merge-pr/: SKILL.md
.claude/skills/validate-architecture/: SKILL.md  check_capabilities.py
docs/architecture/: at-mentions.md  calendar-service.md  camera-service.md  capability-protocols.md  feed-briefing-service.md  feeds-service.md  greeting-service.md  inbox-service.md  knowledge-service.md  skill-workspaces.md  speaker-system.md  transcription-system.md
docs/how-to/: google-calendar-setup.md
docs/plans/: 2026-05-23-greeting-context-providers.md  2026-05-29-show5-firmware.md
docs/specs/: 01-calendar.md  02-weather.md  03-notification-fanout.md  04-rss-feeds.md  05-tasks.md  06-frigate-cameras.md  07-media-library.md  08-health.md  09-google-oauth.md  OPEN_QUESTIONS.md
docs/superpowers/plans/: 2026-05-17-browser-speaker-header.md  2026-05-17-multi-backend-speakers.md  2026-05-17-transcription-service.md  2026-05-23-kokoro-tts-plugin.md
docs/superpowers/specs/: 2026-05-17-browser-speaker-header-design.md  2026-05-17-multi-backend-speakers-design.md  2026-05-17-transcription-service-design.md  2026-05-23-streaming-stt-tts-design.md  2026-05-24-default-plugins-on-services-off-design.md
firmware/show5-firmware/: .gitignore  Cargo.toml  README.md  build.rs  partitions.csv  rust-toolchain.toml  sdkconfig.defaults
firmware/show5-firmware/.cargo/: config.toml
firmware/show5-firmware/src/: main.rs
frontend/: DESIGN.md  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: tls.ts
frontend/src/components/agent/: AgentEditForm.tsx
frontend/src/components/calendar/: AccountEditDrawer.tsx  CalendarPage.tsx  CalendarSidebar.tsx  CreateEventDrawer.tsx  DateTimePicker.tsx  UpcomingEventCard.tsx  WeekAgenda.tsx  datetime.test.mjs  datetime.ts
frontend/src/components/chat/: ChatInput.tsx  ChatPage.tsx  ChatSidebar.tsx  MemberPanel.tsx  MentionText.tsx  MessageList.tsx  TurnBubble.tsx  TypingFooter.tsx  mentionPicker.ts
frontend/src/components/dashboard/: DashboardPage.tsx
frontend/src/components/feeds/: BriefingCard.tsx  FeedEditDrawer.tsx  FeedItemList.tsx  FeedSidebar.tsx  FeedsPage.tsx
frontend/src/components/inbox/: InboxPage.tsx  MailboxEditor.tsx  MailboxSidebar.tsx
frontend/src/components/layout/: AppShell.tsx  BrowserSpeakerControl.tsx  PageSidebar.tsx  SideNav.tsx  TopBar.tsx  nav-shared.ts
frontend/src/components/mcp/: McpClientsPage.tsx  McpLocalPage.tsx  McpPage.tsx
frontend/src/components/notifications/: NotificationBell.tsx
frontend/src/components/plugins/: PluginCard.tsx  PluginsPage.tsx
frontend/src/components/presence/: PresencePage.tsx
frontend/src/components/settings/: ConfigField.tsx  ConfigSection.tsx  GreetingContextProvidersList.tsx  ServiceToggles.tsx  SettingsPage.tsx
frontend/src/components/system/: SetupHttpsPage.tsx
frontend/src/components/tasks/: TaskListEditDrawer.tsx
frontend/src/components/ui/: MarkdownContent.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  sheet.tsx  switch.tsx
frontend/src/hooks/: useBrowserEchoPref.tsx  useBrowserNotifications.tsx  useBrowserSpeaker.tsx  useChatSpeech.tsx  usePresence.tsx  useTyping.tsx  useWsApi.ts
frontend/src/types/: calendar.ts  chat.ts  feeds.ts  inbox.ts  plugins.ts  speaker.ts  tasks.ts
src/gilbert/: __main__.py
src/gilbert/core/: app.py  chat.py  service_manager.py  tls.py
src/gilbert/core/documents/: extractors.py
src/gilbert/core/services/: __init__.py  _backend_actions.py  _ui_blocks.py  agent.py  ai.py  audio_blob_store.py  calendar.py  camera.py  configuration.py  feed_briefing.py  feeds.py  greeting.py  health.py  inbox.py  inbox_ai_chat.py  knowledge.py  mcp.py  music.py  (+23 more)
src/gilbert/integrations/: browser_speaker.py  feed_documents.py  rss_feeds.py
src/gilbert/interfaces/: acl.py  ai.py  audio_blob.py  calendar.py  camera.py  context.py  conversation.py  feeds.py  greeting.py  inbox.py  knowledge.py  mentra.py  messaging.py  music.py  plugin.py  presence.py  speaker.py  storage.py  transcription.py  tts.py  usage.py  users.py  vision.py  workspace.py
src/gilbert/migrations/: 0001_namespace_speaker_aliases_and_config.py  0002_greeting_context_providers.py  0003_plugin_default_state.py
src/gilbert/storage/: sqlite.py
src/gilbert/web/: __init__.py  auth.py  ws_protocol.py
tests/fixtures/feeds/: atom_basic.xml  atom_no_link.xml  rss_basic.xml  rss_no_guid.xml
tests/integration/: test_https_boot.py  test_mcp_end_to_end.py  test_migration_plugin_default_state.py  test_speaker_migration.py  test_sqlite_storage.py
tests/smoke/: mcp_part2_smoke.py
tests/unit/: test_access_control.py  test_ai_profiles.py  test_ai_service.py  test_ai_slash_commands.py  test_audio_blob_route.py  test_audio_blob_store.py  test_audio_output.py  test_browser_speaker.py  test_browser_speaker_activation.py  test_calendar_interfaces.py  test_calendar_service.py  test_camera_service.py  test_cameras_routes.py  test_chat_mentions.py  test_chat_speech_hook.py  test_chat_speech_prefs.py  test_chat_uploads_route.py  test_feed_briefing_service.py  test_feeds_service.py  test_greeting_context_integration.py  test_greeting_context_protocol.py  test_greeting_health_integration.py  test_greeting_service.py  test_health_service.py  test_inbox_service.py  test_mcp_server_service.py  test_mcp_service.py  test_memory_service.py  test_mentra_webhook_route.py  test_migration_greeting_context_providers.py  test_music_service_compatible_backends.py  test_play_request_kind.py  test_plugin_default_state.py  test_plugin_manager_service.py  test_presence_service.py  test_proposals_service.py  test_resolve_speaker_name_my_browser.py  test_rss_atom_backend.py  test_service_manager.py  test_soul_identity_service.py  (+21 more)
tests/unit/core/: test_tls.py
(+8 files in other folders)
