[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gilbert"
version = "0.1.0"
description = "AI assistant for home and business automation"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "httpx>=0.27",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.43.0",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.22",
    "chromadb>=1.5.5",
    "pypdf>=6.9.2",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "python-pptx>=1.0.2",
    "pymupdf>=1.27.2.2",
    "pillow>=12.2.0",
    "markdown>=3.5",
    "pyjwt[crypto]>=2.12.1",
    "aiohttp>=3.13.5",
    # feedparser parses RSS 2.0 / Atom 1.0 — both open standards, no
    # vendor-specific behavior. ~150 KB on disk, BSD-licensed,
    # stdlib-only transitive deps. Justified in
    # ``docs/specs/04-rss-feeds.md`` §3 (Note on integrations/
    # precedent) — the test for "may live in core integrations/" is
    # vendor-free + small + provider-neutral; feedparser clears all
    # three. The only feed backend that stays in core; provider-
    # specific backends (Reddit, HackerNews, YouTube, podcasts) belong
    # in ``std-plugins/``.
    "feedparser>=6.0.10",
    # Std-plugin workspace members — each is a uv workspace member with
    # its own ``pyproject.toml`` declaring its third-party Python deps.
    # Listing them here (with ``{ workspace = true }`` sources below)
    # means a plain ``uv sync`` resolves every plugin's deps into the
    # shared venv, so users don't have to remember ``--all-packages``.
    "gilbert-plugin-american-standard",
    "gilbert-plugin-andon-fm",
    "gilbert-plugin-anthropic",
    "gilbert-plugin-arr",
    "gilbert-plugin-bedrock",
    "gilbert-plugin-browser",
    "gilbert-plugin-deepgram",
    "gilbert-plugin-deepseek",
    "gilbert-plugin-discord-webhook",
    "gilbert-plugin-elevenlabs",
    "gilbert-plugin-frigate",
    "gilbert-plugin-gemini",
    "gilbert-plugin-google",
    "gilbert-plugin-groq",
    "gilbert-plugin-guess-that-song",
    "gilbert-plugin-lutron-radiora",
    "gilbert-plugin-mistral",
    "gilbert-plugin-ngrok",
    "gilbert-plugin-ntfy",
    "gilbert-plugin-ollama",
    "gilbert-plugin-open-meteo",
    "gilbert-plugin-openai",
    "gilbert-plugin-openwakeword",
    "gilbert-plugin-openai-compatible",
    "gilbert-plugin-openrouter",
    "gilbert-plugin-porcupine",
    "gilbert-plugin-pushover",
    "gilbert-plugin-qwen",
    "gilbert-plugin-slack",
    "gilbert-plugin-sonos",
    "gilbert-plugin-tavily",
    "gilbert-plugin-telegram",
    "gilbert-plugin-tesseract",
    "gilbert-plugin-unifi",
    "gilbert-plugin-xai",
    "mcp>=1.2.0",
    "faster-whisper>=1.2.1",
]

[tool.uv.sources]
gilbert-plugin-american-standard = { workspace = true }
gilbert-plugin-andon-fm = { workspace = true }
gilbert-plugin-anthropic = { workspace = true }
gilbert-plugin-arr = { workspace = true }
gilbert-plugin-bedrock = { workspace = true }
gilbert-plugin-browser = { workspace = true }
gilbert-plugin-deepgram = { workspace = true }
gilbert-plugin-deepseek = { workspace = true }
gilbert-plugin-discord-webhook = { workspace = true }
gilbert-plugin-elevenlabs = { workspace = true }
gilbert-plugin-frigate = { workspace = true }
gilbert-plugin-gemini = { workspace = true }
gilbert-plugin-google = { workspace = true }
gilbert-plugin-groq = { workspace = true }
gilbert-plugin-guess-that-song = { workspace = true }
gilbert-plugin-lutron-radiora = { workspace = true }
gilbert-plugin-mistral = { workspace = true }
gilbert-plugin-ngrok = { workspace = true }
gilbert-plugin-ntfy = { workspace = true }
gilbert-plugin-ollama = { workspace = true }
gilbert-plugin-open-meteo = { workspace = true }
gilbert-plugin-openai = { workspace = true }
gilbert-plugin-openai-compatible = { workspace = true }
gilbert-plugin-openwakeword = { workspace = true }
gilbert-plugin-openrouter = { workspace = true }
gilbert-plugin-pushover = { workspace = true }
gilbert-plugin-porcupine = { workspace = true }
gilbert-plugin-qwen = { workspace = true }
gilbert-plugin-slack = { workspace = true }
gilbert-plugin-sonos = { workspace = true }
gilbert-plugin-tavily = { workspace = true }
gilbert-plugin-telegram = { workspace = true }
gilbert-plugin-tesseract = { workspace = true }
gilbert-plugin-unifi = { workspace = true }
gilbert-plugin-xai = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gilbert"]

# ── Plugin workspace ─────────────────────────────────────────────────
#
# Every plugin directory with its own ``pyproject.toml`` is treated as a
# uv workspace member. Running ``uv sync`` from the repo root pulls in
# the plugin's declared third-party dependencies into the shared venv,
# keeping plugin-specific deps (``pytesseract``, ``soco``, ``anthropic``,
# ...) out of the core Gilbert ``pyproject.toml`` while still making
# them install with a single command.
#
# Directories that don't contain a ``pyproject.toml`` are ignored, so
# plugins with zero third-party deps (or empty placeholder directories
# under ``local-plugins`` / ``installed-plugins``) incur no cost.
[tool.uv.workspace]
members = [
    "std-plugins/*",
    "local-plugins/*",
    "installed-plugins/*",
]
exclude = [
    "std-plugins/docs",
    "local-plugins/docs",
]

# Force an older ``onnxruntime`` across the workspace. ``chromadb``
# lists ``onnxruntime`` as a hard dep with no version bound, and uv
# would otherwise resolve to 1.24.x which dropped ``macosx_x86_64``
# wheels — leaving Intel Mac users unable to sync. 1.20.x is the last
# series with Intel macOS wheels and is compatible with the chromadb
# releases we use.
#
# tflite-runtime: ``openwakeword`` lists it as a Linux dep, but the
# published wheels only cover Python 3.8–3.11. Override to a
# marker that excludes Python 3.12+ so uv can resolve the workspace
# on modern Pythons. openWakeWord falls back to onnxruntime (already in
# the workspace) on Python 3.12+.
[tool.uv]
override-dependencies = [
    "onnxruntime<1.21",
    "tflite-runtime>=2.8.0; sys_platform == 'linux' and python_version < '3.12'",
]

[tool.pytest.ini_options]
# Include every plugin directory so plugin-specific tests (which live
# alongside the plugin sources) run automatically when the plugin is
# installed. See ``gilbert.yaml`` for what each directory is for.
testpaths = ["tests", "std-plugins", "local-plugins", "installed-plugins"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
# ``importlib`` mode — avoids the duplicate ``tests.conftest`` clash
# we'd hit otherwise, because every plugin has its own ``tests/``
# directory with its own ``conftest.py``. The legacy ``prepend`` mode
# would import all of them as ``tests.conftest`` and collide on the
# second one.
addopts = "--import-mode=importlib"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = [
    # Empty abstract methods in Service / *Backend ABCs are intentional
    # "override if needed" hooks — subclasses opt in by overriding,
    # they aren't required. Decorating with @abstractmethod would be
    # wrong (forces every subclass to implement) and leaving them bare
    # is idiomatic for this codebase.
    "B027",
    # FastAPI ``Depends()`` / ``Body()`` / ``Query()`` default values
    # are the standard framework pattern, not an accidental call in
    # a default argument.
    "B008",
    # E501 (line too long) is tracked in a pre-existing style drift —
    # the repo has hundreds of slightly-over-100-character lines from
    # before the cap was formally enforced. Reformatting all of them
    # would dominate the diff; the cap still applies to new code via
    # developer discipline rather than an automated gate.
    "E501",
    # SIM102 / SIM105 / SIM108 / SIM117 are stylistic suggestions
    # (collapse nested ifs, use ternary, contextlib.suppress, merge
    # ``with`` blocks) that the codebase deliberately spells out
    # explicitly for readability in hot code paths.
    "SIM102",
    "SIM105",
    "SIM108",
    "SIM117",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "reportlab>=4.4.10",
    "types-markdown>=3.10.2.20260408",
    "types-openpyxl>=3.1.5.20260408",
    "types-pyyaml>=6.0.12.20260408",
]
